--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "start": "node index.js"
   },
+  "engines": {
+    "node": "20.4.0"
+  },
   "type": "module",
   "dependencies": {
     "body-parser": "^1.20.2",
