--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "LingBuddy Platform",
   "version": "0.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node src/server.js"
   },
   "engines": {
     "node": "18.x"
@@ -15,7 +15,8 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "faiss-node": "^0.2.3",
+    "faiss-node": "^0.2.1",
+    "http": "^0.0.1-security",
     "langchain": "^0.0.96",
     "mongoose": "^7.4.3",
     "openai": "^3.3.0",
