no idea what I doing

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 DB_HOST = 'mongodb+srv://LingBuddyDBAdmin:businessModel@LingBuddyDB.yzfvfki.mongodb.net/LingBuddyDB?retryWrites=true&w=majority'
 OPENAI_API_KEY = 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
+PATH = 'libomp'
+LD_LIBRARY_PATH = 'libomp'
+libomp = 'libomp'
