--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node src/index.js"
   },
   "engines": {
-    "node": "18.x"
+    "node": "18.17.1"
   },
   "type": "module",
   "dependencies": {
