--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "LingBuddy Platform",
   "version": "0.1.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "index.js",
   "scripts": {
-    "start": "node src/index.js"
+    "start": "node index.js"
   },
   "engines": {
     "node": "18.17.1"
@@ -15,7 +15,6 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "http": "^0.0.1-security",
     "mongoose": "^7.4.3"
   }
 }
