--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
     "express": "^4.18.2",
     "mongoose": "^7.4.3",
     "path": "^0.12.7",
-    "url": "^0.11.1"
+    "url": "^0.11.1",
+    "faiss-node": "^0.2.3",
+    "langchain": "^0.0.96",
+    "openai": "^3.3.0",
+    "store": "^2.0.12"
   }
 }
