--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mongoose": "^7.4.3",
-    "path": "^0.12.7",
-    "url": "^0.11.1",
     "faiss-node": "^0.2.3",
     "langchain": "^0.0.96",
+    "mongoose": "^7.4.3",
     "openai": "^3.3.0",
-    "store": "^2.0.12"
+    "path": "^0.12.7",
+    "pickleparser": "^0.1.0",
+    "store": "^2.0.12",
+    "url": "^0.11.1"
   }
 }
